<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gear7_000.android_coursework.LoginActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0"
        android:weightSum="1">

        <TableRow>

            <EditText
                android:id="@+id/usernameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="Username"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/usernameText"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/create_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:onClick="onLoginClick"
                android:text="Login" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/create_button"
                android:layout_alignBottom="@+id/create_button"
                android:layout_marginTop="10dp"
                android:onClick="onRegisterClick"
                android:text="Register" />
        </TableRow>

    </TableLayout>
</ScrollView>
