<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_student"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textStyle="bold"
    tools:context="com.example.gear7_000.android_coursework.StudentAddActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow>

            <Button
                android:id="@+id/camera_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:onClick="onCameraClick"
                android:text="Capture" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ID" />

            <EditText
                android:id="@+id/idText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </TableRow>

        <TableRow>

            <TextView></TextView>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textViewFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="FirstName" />

            <EditText
                android:id="@+id/nameTextFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow>

            <TextView></TextView>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textViewLast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LastName" />

            <EditText
                android:id="@+id/nameTextLast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow>

            <TextView></TextView>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Address" />

            <EditText
                android:id="@+id/addressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress" />
        </TableRow>

        <TableRow>

            <TextView></TextView>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow>

            <TextView></TextView>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone" />

            <EditText
                android:id="@+id/phoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </TableRow>

        <TableRow>

            <TextView></TextView>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:onClick="onAddClick"
                android:text="Add" />

            <Button
                android:id="@+id/return_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:onClick="onReturnClick"
                android:text="Return" />

        </TableRow>
    </TableLayout>
</ScrollView>
